WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153492
REGRESSION (
r194557
): Keyboard shortcuts stop working after the WKWebView is unparented and reparented
https://bugs.webkit.org/show_bug.cgi?id=153492
Summary
REGRESSION (r194557): Keyboard shortcuts stop working after the WKWebView is ...
Tim Horton
Reported
2016-01-26 10:48:35 PST
REGRESSION (
r194557
): Keyboard shortcuts stop working after the WKWebView is unparented and reparented
Attachments
Patch
(3.93 KB, patch)
2016-01-26 10:48 PST
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-01-26 10:48:49 PST
Created
attachment 269889
[details]
Patch
Tim Horton
Comment 2
2016-01-26 11:13:22 PST
http://trac.webkit.org/changeset/195602
WebKit Commit Bot
Comment 3
2016-01-26 16:59:25 PST
Re-opened since this is blocked by
bug 153526
Tim Horton
Comment 4
2016-01-26 19:17:03 PST
http://trac.webkit.org/changeset/195651
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug